# fdk-browser

./: .gitignore  README.md  app.py  pyproject.toml
fdk/.streamlit/: config.toml
fdk/io/: file.py
fdk/models/: models.py
fdk/storage/: gateway.py
fdk/storage/builder/: builder.py  json.py
fdk/storage/db/: deta.py
fdk/storage/json/: gateway.py
